--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,23 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #f0efe9;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+::-webkit-scrollbar {
+  display: none;
+}
+h1 {
+  font-size: 3em;
+  margin: 0;
+  font-weight: 400;
 }
 
 a {
@@ -25,15 +31,8 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 button {
@@ -55,15 +54,18 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.d-flex {
+  display: flex;
+}
+
+.pb-2 {
+  padding-bottom: 2px;
+}
+
+.fw-500 {
+  font-weight: 500;
+}
+
+.font_secondary {
+  color: rgb(183, 183, 183);
 }
