--- a/src/Components/Addtodo/AddTodo.module.css
+++ b/src/Components/Addtodo/AddTodo.module.css
@@ -1,7 +1,7 @@
 .addBtn {
   bottom: -6%;
   position: absolute;
-  font-size: 2.5rem;
+  font-size: 2.8rem;
   color: #94949c;
   border-radius: 50%;
   background-color: #5ad3a0;
@@ -10,4 +10,9 @@
   height: 5.5rem;
   align-self: center;
   outline: none;
+  border: none;
+}
+
+.addBtn:hover {
+  background-color: #4ccb96;
 }
