--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Arial";
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -11,9 +11,13 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+img {
+  -webkit-user-drag: none;
+}
 ::-webkit-scrollbar {
   display: none;
 }
+
 h1 {
   font-size: 3em;
   margin: 0;
@@ -35,9 +39,9 @@ body {
   box-sizing: border-box;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
+/* button {
+ 
+
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
@@ -45,14 +49,14 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
-}
-button:hover {
+} */
+/* button:hover {
   border-color: #646cff;
-}
-button:focus,
+} */
+/* button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
+} */
 
 .d-flex {
   display: flex;
