--- a/src/Components/Addtodo/AddTodo.module.css
+++ b/src/Components/Addtodo/AddTodo.module.css
@@ -1,10 +1,10 @@
 .addBtn {
   bottom: -6%;
   position: absolute;
-  font-size: 2.8rem;
-  color: #94949c;
+  font-size: 2.9rem;
+  color: #aeaeae;
   border-radius: 50%;
-  background-color: #5ad3a0;
+  background-color: #56e4a7;
   width: 5.5rem;
   padding: 0;
   height: 5.5rem;
@@ -14,5 +14,5 @@
 }
 
 .addBtn:hover {
-  background-color: #4ccb96;
+  background-color: rgb(102, 231, 175);
 }
