--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600&family=Roboto:wght@300;400;500&display=swap");
+
 :root {
-  font-family: "Arial";
+  font-family: "Poppins", sans-serif;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -15,7 +17,8 @@
 img {
   -webkit-user-drag: none;
 }
-z ::-webkit-scrollbar {
+
+::-webkit-scrollbar {
   display: none;
 }
 
@@ -49,7 +52,7 @@ a:hover {
 }
 
 .fw-600 {
-  font-weight: 600;
+  font-weight: 600 !important;
 }
 
 .font_secondary {
