--- a/src/Components/Todo/Todo.module.css
+++ b/src/Components/Todo/Todo.module.css
@@ -1,10 +1,10 @@
 .todoText {
   font-size: 19px;
   font-weight: normal;
-  margin-bottom: 1.8rem;
-  margin-top: 0;
+  margin: 0;
   display: flex;
   justify-content: space-between;
+  cursor: pointer;
 }
 
 .todoImage {
@@ -14,8 +14,17 @@
 
 .todo {
   overflow-x: auto;
+  margin-bottom: 1.7rem;
 }
 
 .todoText span {
   margin-right: 10px;
+}
+
+.deletebutton {
+  color: red;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
 }
